# Termux-nexus

./: .env.example  .gitignore  DOSSIE_TECNICO_C20.md  EXECUTIVE_DASHBOARD.md  INTEGRITY_BASELINE_C20.md  MANIFESTO_CRIPTOGRAFICO_C20.md  NEXUS_ARCHITECTURE_REALITY_MAP.md  NEXUS_MESH_PROTOCOL_V1.md  NEXUS_PRODUCT_BRIDGE.md  README-v1400-backup.md  README.md  REGISTRO_FINAL_C20.md  RUNTIME_V1_BETA_RELEASE.md  WHITE_PAPER.md  analyzer.py  benchmarks_edge.csv  chaos_monkey.py  chaos_runner.py  chaos_test.py  cluster_orchestrator.py  config.yaml  demo_cluster.py  init_nexus.sh  metrics.json  monitor.py  multiprocess_test.py  network_mesh.py  nexus_config.env  nexus_config.py  nexus_distributed_core.py  nexus_protocol.py  nexus_rendezvous.py  nexus_security.py  nexus_transport.py  nexus_v500_core.p  nexus_v500_core.py  patch_wan_core.py  persistence.py  pyproject.toml  relatorio_robustez.html,  (+8 more)
Termux-nexus/: .gitignore  CONTRIBUTING.md  FINANCIAL_PITCH.md  README.md,  VALIDATION.md  WHITE_PAPER.md  analisar_stress.py  audit_ledger.py  cluster_state.py  collect_benchmarks.py  dashboard.py  heartbeat.py  network_discovery.py  nexus_distributed_core.py  nexus_v500.py  nexus_v500_core.py  persistence.py  rate_limiter.py  setup_node.sh  stress_benchmark.py  test_persistence.py  web_panel.py
archived_patches/: fix_sync_loop_v2100.py  force_failover_v2100.py  nexus_chaos_injector.py  patch_election_final.py  patch_election_v2100.py
db/: checklist.txt
docs/: PROJECT_STATE.md  windows_android_validation.md
nexus/: __init__.py  __main__.py  cli.py  client.py  exceptions.py
(+51 files in other folders)
